--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>New Tab</title>
-  <link rel="stylesheet" href="app.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>dolence</title>
+    <link rel="stylesheet" href="../src/app.css" />
 </head>
 <body>
-  <div class="container">
-    <p id="day" class="day"></p>
-    <div id="clock" class="clock"></div>
+    <div class="container">
+        
+        <div class="header">
+            <div class="header-icon">
+                <a href="index.html" aria-label="Dolence">
+                    <img src="https://sat02pap001files.storage.live.com/y4mIs5uRnBb7OrXXJkbqUbx0qHgffEtoGjju7R9RNDJoTaUEOY5DV77TVT83edXhwQ0ztwFJYKVKixW7KCIc5rIAgsP3PSBdtmAQFWeJO4DVSpFgD0F8_KRxjVZzjmzd_Qb8zMMoJifCq2Jfj8Qj6aakZmYsDyrYf6GoDIw-I4NEAYKtPD0SNHdth6A3B8l26kY?width=255&height=256&cropmode=none" width="35" height="36" alt="Dolence"/>
+                </a>
+            </div>
+            <div class="header-project">
+                <a href="project/" aria-label="Project">Projects</a>
+            </div>
+            <div class="header-contact">
+                <a href="contact/" aria-label="Contact">Request Demo</a>
+            </div>
+            <div class="header-blog">
+                <a href="blog/" aria-label="Blog">Blog</a>
+            </div>
+            <div class="header-management">
+                <a href="management/" aria-label="Management">Management</a>
+            </div>
+            <div class="header-login">
+                <a href="login/" aria-label="Login">Log in</a>
+            </div>
+            <div class="header-register">
+                <a href="register/" aria-label="Register">Register</a>
+            </div>
+        </div>
 
-    <hr class="divider" />
+        <div class="body-design">
+            <div class="body-title">
+                <span>GUI&nbsp;&nbsp;|&nbsp;&nbsp;Command Line&nbsp;&nbsp;|&nbsp;&nbsp;Web3</span>
+            </div>
+            <div class="body-btn">
+                <a href="contact/" aria-label="contact">Request a Demo</a>
+            </div>
+        </div>
+        <div class="body-context">
+            <div class="body-context-title">
+                <span>Begin development into various aspect of technologies</span>
+            </div>
+            <div class="body-context-flex">
+                <div class="body-context-a">
+                    <div class="body-flex-title">
+                        <span>Web development</span>
+                    </div>
+                    <div class="body-flex-text">
+                        <span>Static and dynamic web technologies design for the modern internet or intranet for social networks, electronic businesses and blockchain technologies.</span>
+                    </div>
+                    <div class="body-flex-btn">
+                        <a href="contact/" aria-label="contact">Contact Us</a>
+                    </div>
+                </div>
+                <div class="body-context-b">
+                    <div class="body-flex-title">
+                        <span>Blockchain technologies</span>
+                    </div>
+                    <div class="body-flex-text">
+                        <span>Develop your own blockchain solution, smart contract solution on exisiting blockchain like (binance, ethereum, solana, etc...), write and deploy NTF's to minting platforms.</span>
+                    </div>
+                    <div class="body-flex-btn">
+                        <a href="contact/" aria-label="contact">Contact Us</a>
+                    </div>
+                </div>
+                <div class="body-context-c">
+                    <div class="body-flex-title">
+                        <span>Mobile Development</span>
+                    </div>
+                    <div class="body-flex-text">
+                        <span>Static and dynamic web technologies design for the modern internet or intranet for social networks, electronic businesses and blockchain technologies.</span>
+                    </div>
+                    <div class="body-flex-btn">
+                        <a href="contact/" aria-label="contact">Contact Us</a>
+                    </div>
+                </div>
+                <div class="body-context-d">
+                    <div class="body-flex-title">
+                        <span>Software Development</span>
+                    </div>
+                    <div class="body-flex-text">
+                        <span>Static and dynamic web technologies design for the modern internet or intranet for social networks, electronic businesses and blockchain technologies.</span>
+                    </div>
+                    <div class="body-flex-btn">
+                        <a href="contact/" aria-label="contact">Contact Us</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script src="../src/app.js"></script>
 
-    <p class="title">Chrome Extension is Ready!</p>
-    <p class="subtitle">Start by updating <code>index.html</code></p>
-  </div>
-  <script src="app.js"></script>
+        <!--
+            This HTML file is a template for overriding pages like New Tab, Bookmarks, or History page.
 
-  <!--
-    This HTML file is a template for overriding pages like New Tab, Bookmarks, or History page.
-
-    To begin the development, run `npm run watch`.
-    To create a production bundle, use `npm run build`.
-  -->
+            To begin the development, run `npm run watch`.
+            To create a production bundle, use `npm run build`.
+        -->
+    </div>
 </body>
 </html>
