--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dolence</title>
+    <link rel="icon" href="https://sat02pap001files.storage.live.com/y4mBXXmnbr-XV7hWLRdw8HffKmdyYt05U2wMtr0ry-DazCAF-vUKjbKfn9NNjuDddmoerMbZLnDzgk4ugdeUa8z9Y-hlZgAKVgaJ3A3Y8_VaQ7ks15Xl7-NK1Hfmz-2EXB8eMKnKT9fhJ029fhJUCCKyqkv6rqfg3HRUmueHcNeSfY6oFpjc_jOXJDM55vPdS_F?width=55&height=56&cropmode=none" type="image/x-icon" />
     <link rel="stylesheet" href="../src/app.css" />
 </head>
 <body>
@@ -92,6 +93,19 @@
                     <div class="body-flex-btn">
                         <a href="contact/" aria-label="contact">Contact Us</a>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="body-hero">
+            <div class="body-hero-image">
+                <img src="https://sat02pap001files.storage.live.com/y4mSD-x8l4dT6xR6tnq3v1zHgdZdCSLw1d08eUUiBO1BNoqakdDAE94majZ88LZy1S3WXm6pNC3tBKlRBNEEtp4_gygqH_I6kcsB2ddlgzoFb4ItlGZ9koEL4FPFvqcIzGW9e8te5caLBoxhJPUztHwcts6g6or8k0SSeZlUCE51mi_axQbEF7CAgr8YOcdedYW?width=433&height=444&cropmode=none" width="433" height="444" alt="infrastructure"/>
+            </div>
+            <div class="body-hero-context">
+                <div class="body-hero-title">
+                    <span>Infrastruture and Solutions</span>
+                </div>
+                <div class="body-hero-text">
+                    <span>Infrastruture software platform designed on the best database programs, security application, email and other communications software are attached to technology development.</span>
                 </div>
             </div>
         </div>
