--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,53 @@
                 </div>
             </div>
         </div>
+        <div class="body-hero1">
+            <div class="body-hero1-context">
+                <div class="body-hero1-title">
+                    <span>Platform Development Life Cycle</span>
+                </div>
+                <div class="body-hero1-text">
+                    <span>Detailed project planing describing how to develop, maintain, replace and alter project, platfrom designing and product architecture, building, testing and deployment to the open market.</span>
+                </div>
+            </div>
+            <div class="body-hero1-image">
+                <img src="https://sat02pap001files.storage.live.com/y4mrQZ52ur_nAdfoJgz8mJr8ppHzUei2b-lIho1OQVKOyFCRecvZ8RPLFvyooo5v0UkeVTic9Lne1cLm86vFTcgnDVnoSieowfmX0u1jAR-oh_ycJlX2FAzXBCjRaxvRuOnLujmPEYP6SJ50rQeGDAQ2Pp3SVDxMFUOpmDIlGBjv6L8TPpZNr89jkOWryQPPLLY?width=521&height=450&cropmode=none" width="521" height="450" alt="devops"/>
+            </div>
+        </div>
+        <div class="body-platform">
+            <div class="body-platform-title">
+                <span>Tools&nbsp;&nbsp;|&nbsp;&nbsp;Code&nbsp;&nbsp;|&nbsp;&nbsp;Platforms</span>
+            </div>
+            <div class="body-platform-text">
+                <span>Debugging, Countinous development, continous integration, integrated development enviroment, <br> cloud technologies, database management</span>
+            </div>
+            <div class="body-platform-tools">
+                <div class="body-platform-icon">
+                    <img src="https://sat02pap001files.storage.live.com/y4mgJky28fUgS6RvK2uW6chS6NMjiIQhFShzTksIXN6QWAn3CXUBMA5anbN5RdJXWv8sDH-8_PQeaoOSXseD9Nvn5a0LaNfZAXv6ZsMbEthmDdwuSVxQf2Yj4LchoHC99EJ3T_nOyw1zTZoCxbXAdrKw2nF4ppUHHPo7m5q_Em0P3EP5NlaTTuRy1ZTOYFQ-K9f?width=256&height=256&cropmode=none" width="106" height="106" alt="azure"/>
+                </div>
+                <div class="body-platform-icon">
+                    <img src="https://sat02pap001files.storage.live.com/y4mYVHT4-bDRvDtt5lKJxWnakgizu3dsdA3z9VPxN_bwvVT2eNSY6fiyPUcFu5ZIlGmmidaF1oK1ms_4fHBPJvEwf-qkYEpIA9ihfpMHs888ID_sbMI6MJCvBM5HJIswhLubFD_8YhDB72qRD77dMBEdLFAM_WQCw3hUUpO7QugBcvdWHWGy8X3bJWaTn8hRdHp?width=256&height=256&cropmode=none" width="106" height="106" alt="geth"/>
+                </div>
+                <div class="body-platform-icon">
+                    <img src="https://sat02pap001files.storage.live.com/y4mm5qelFdIBp38R8sH6sTQ9EXr2r7pjQKiPAqSE2sJmMIrx2Uy9nPvJ3j5xp2ZfljfTyxP-JABV0Y4OiocYW4UUXksMEd9XPQU-cEx6vx82hZbvMWYQ8UiIAGVJEgqBy6qgpxjkD00J0kcRgV_RFoUGI7yQG8fpgUD77cLqhtwa49I37R5nJAMSvDZkKLxenWJ?width=256&height=256&cropmode=none" width="106" height="106" alt="figma"/>
+                </div>
+                <div class="body-platform-icon">
+                    <img src="https://sat02pap001files.storage.live.com/y4mUapd0SRWa6e8mGVG8b9zfguJ_I-LinJ0pYflQeAE5Trjd0q6TufVg5wlDp46BH58Qp1_ZxkZn-KJnGWrGpR0SaXdGA4AiIgTJKUKOL3eKRJu7OwqepF9A6j7ZnP8pt3dSdOwhD-haFnR0ypSEpf00zlReQZmbDXSmvC4wQxixHDs7Wtz1W_qNC4ovIHfRL5i?width=256&height=256&cropmode=none" width="106" height="106" alt="GCC"/>
+                </div>
+                <div class="body-platform-icon">
+                    <img src="https://sat02pap001files.storage.live.com/y4mcykXD4oKcxamSiCfFkUMmF_GXHkTuTaV1PGwU6w1CVRAiG5Lk3g4DSy3fQ4dJf8mcAS3ncEoYEhttMAUphHa33bh8UxQmTo1N_1l1-hSkKBKg9nbKb0xAfdAPgF9U_OTW5PYLYO3HHE9m-cGSh6dzKSt0zwRMhPdRd3IderHu35SYhPTBjM_QtjmzUd655K_?width=256&height=256&cropmode=none" width="106" height="106" alt="Github"/>
+                </div>
+                <div class="body-platform-icon">
+                    <img src="https://sat02pap001files.storage.live.com/y4mPSadt43BGHjJrghWW0xVxdDLkDU_zmwZEWAnLbF2y8uDo4qpIJmCDgWBBfh4exRdGTQlW8Vl7urKYEkZp5Tus3lh6U-MAK9Psjrih4QysUet37MP-2X4fHAzqZyZ9jPPYFpn1oBKeL9qFXd-yBtHxo3-XLuqhhsK-lXtl28vq8cjvR39rFEu0zWHPJjLq1Zk?width=256&height=256&cropmode=none" width="106" height="106" alt="incognito"/>
+                </div>
+                <div class="body-platform-icon">
+                    <img src="https://sat02pap001files.storage.live.com/y4mjg5XrU8AOdAmwJo1Yw01tC8KOTeVUZb8X2Q8l8B62UduSQXxjyezA0InU7hafDpoxnYuXjUdQ1iuS0NAlSQaOtr61y5SNBYlSYRlL0f9-ZU7kOj7LrnV6o86p4M_SS-1LImiSaCnI5tafQqYKVSPPt82BgR13Z4SLuM8OYx4iHPtQTTC3VD78cq4ujiIkvvH?width=256&height=256&cropmode=none" width="106" height="106" alt="sdk"/>
+                </div>
+                <div class="body-platform-icon">
+                    <img src="https://sat02pap001files.storage.live.com/y4m-T3agDUVZTcCijmNvFV_N3XkmgzFl1wC5uiUTjst8dl1fwQg8p4v4oO2c8POGyE7YvULiAV0USMVdzWqGAm17MZX-OF1xFEpe-jF3g6tt3Go_1Uv0BbgR1CJW5Hi6YwPGKdKSqCY70aNgvjbXPP0bo2RICtFPR3mjr6-w6zwa5pR3OHs-pCgkl8iRW2bwPeA?width=256&height=256&cropmode=none" width="106" height="106" alt="java"/>
+                </div>
+            </div>
+        </div>
         <script src="../src/app.js"></script>
 
         <!--
